it is not working for some reason

--- a/html/index.html
+++ b/html/index.html
@@ -20,11 +20,12 @@
 
 
  <!-- Third-party libraries -->
+ <script src="../lib/jquery-1.11.3.min.js"></script>
 
 
-
- <!-- Our Javascript -->
-
+ <!-- My Javascript -->
+ <script src='../js/spa.js'></script>
+ <script src='../js/spa.shell.js'></script>
 
  <!-- Feature modules -->
 
