madde some changes

--- a/html/index.html
+++ b/html/index.html
@@ -34,15 +34,15 @@
 
  <!-- Let's get started -->
  <script>
-  //$(function() {
-   //spa.initModule($('#spa'));
-  //});
+   $(function() {
+     spa.initModule($('#spa'));
+   });
  </script>
 
 </head>
 
 <body>
- <main id="spa">Danilo Zekovic 40</main>
+  <main id="spa">Danilo Zekovic 40</main>
 </body>
 
 </html>
