some changes before switching back to master

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
  <title>Our First SPA</title>
 
- <!-- Our "good enough for now" stylesheet -->
-
+ <!-- My stylesheet -->
+ <link rel="stylesheet" href="css/maincss.css" type="text/css" />
 
  <!-- id is needed for this stylesheet so it can be swapped out -->
 
