--- a/html/index.html
+++ b/html/index.html
@@ -13,14 +13,16 @@
 
  <title>Our First SPA</title>
 
- <!-- Our "good enough for now" stylesheet -->
-
+ <!-- My stylesheet -->
+ <link rel="stylesheet" href="../css/maincss.css" type="text/css" />
 
  <!-- id is needed for this stylesheet so it can be swapped out -->
 
 
  <!-- Third-party libraries -->
  <script src="../lib/jquery-1.11.3.min.js"></script>
+ <link rel="stylesheet" href="../lib/bootstrap-3.3.6-dist/css/bootstrap.min.css">
+ <script src="../lib/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
 
 
  <!-- My Javascript -->
