--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
  <meta name="fragment" content="!">
  <meta name="description" content="This is a demo SPA for OSCON created by Saint Joseph's College.">
 
- <title>Our First SPA</title>
+ <title>SJC Clubs</title>
 
  <!-- My stylesheet -->
  <link rel="stylesheet" href="../css/maincss.css" type="text/css" />
