loading the spa.club.js

--- a/html/index.html
+++ b/html/index.html
@@ -30,6 +30,7 @@
  <!-- My Javascript -->
  <script src='../js/spa.js'></script>
  <script src='../js/spa.shell.js'></script>
+ <script src='../js/spa.club.js'></script>
 
  <!-- Feature modules -->
 
