--- a/html/index.html
+++ b/html/index.html
@@ -25,6 +25,7 @@
  <script src="../lib/jquery-1.11.3.min.js"></script>
  <link rel="stylesheet" href="../lib/bootstrap-3.3.6-dist/css/bootstrap.min.css">
  <script src="../lib/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
+ <script src="../lib/page.js"></script>
 
 
  <!-- My Javascript -->
