loaded spa.about.js

--- a/html/index.html
+++ b/html/index.html
@@ -32,6 +32,7 @@
  <script src='../js/spa.js'></script>
  <script src='../js/spa.shell.js'></script>
  <script src='../js/spa.club.js'></script>
+ <script src='../js/spa.about.js'></script>
 
  <!-- Feature modules -->
 
