--- a/html/index.html
+++ b/html/index.html
@@ -33,6 +33,7 @@
  <script src='../js/spa.shell.js'></script>
  <script src='../js/spa.club.js'></script>
  <script src='../js/spa.about.js'></script>
+ <script src='../js/spa.home.js'></script>
 
  <!-- Feature modules -->
 
